# magic-skills

./: AI_TOOLS_INTEGRATION.md  AI_TOOL_INTEGRATION_SUMMARY.md  ANTHROPIC_SKILLS_COMPARISON.md  API_DOCS.md  CHANGELOG.md  COMMANDS_REFERENCE.md  COMPLETION_REPORT.md  INSTALL.md  KIRO_INTEGRATION.md  LICENSE  README.md  SIX_DOMAINS_SUMMARY.md  SKILL_DEVELOPMENT.md  SKILL_DOMAINS.md  VERIFICATION_GUIDE.md  VERIFICATION_SUMMARY.md  check_completion.py  claude_desktop_config.json  create_skills.py  install.ps1  install.sh  pyproject.toml  quick-install.sh  quick_verify.sh  verification_report.json  verify_all.py
api/: __init__.py  main.py
cli/: __init__.py  main.py
docs/: ai-tool-integration.md  installation.md
examples/: anthropic_migration_example.py
examples/converted_skills/code-reviewer/: README.md  handler.py  prompt.txt  skill.yaml
extensions/vscode/: package.json
extensions/vscode/src/: extension.ts
magic_skills.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: convert_skills.py
skills/android-os/Android.bp-gen/: SKILL.md  handler.py  prompt.txt  skill.yaml
skills/android-os/Android.mk-gen/: SKILL.md  handler.py  prompt.txt  skill.yaml
skills/android-os/aidl-interface-gen/: SKILL.md  handler.py  prompt.txt  skill.yaml
skills/android-os/android-architecture-analyze/: SKILL.md  handler.py  prompt.txt  skill.yaml
skills/android-os/android-service-gen/: SKILL.md  handler.py  prompt.txt  skill.yaml
skills/android-os/anr-analysis/: SKILL.md  handler.py  prompt.txt  skill.yaml
skills/android-os/binder-stub-gen/: SKILL.md  handler.py  prompt.txt  skill.yaml
skills/android-os/boot-time-optimize/: SKILL.md  handler.py  prompt.txt  skill.yaml
skills/android-os/crash-analysis-native/: SKILL.md  handler.py  prompt.txt  skill.yaml
skills/android-os/device-tree-gen/: SKILL.md  handler.py  prompt.txt  skill.yaml
skills/android-os/driver-template-gen/: SKILL.md  handler.py  prompt.txt  skill.yaml
skills/android-os/gms-compliance-check/: SKILL.md  handler.py  prompt.txt  skill.yaml
skills/android-os/hal-interface-gen/: SKILL.md  handler.py  (+2 more)
src/core/: __init__.py  command_parser.py  skill_manager.py  upgrade_manager.py
src/mcp/: __init__.py  server.py
src/models/: __init__.py  anthropic_provider.py  base_provider.py  cohere_provider.py  deepseek_provider.py  ernie_provider.py  google_provider.py  kimi_provider.py  meta_provider.py  mistral_provider.py  model_manager.py  openai_provider.py  qwen_provider.py  spark_provider.py
src/optimization/: __init__.py  ab_tester.py  feedback_collector.py  feedback_processor.py  model_selector.py  prompt_optimizer.py
tests/: __init__.py  test_model_manager.py  test_optimization.py  test_skill_manager.py
(+598 files in other folders)
